--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rinterio</title>
     <!-- tailwindcss cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -37,9 +37,50 @@
     </style>
 </head>
 <body class="body-font">
-    <h1 class="text-3xl font-bold bg-red-500">
-        Hello world! 
-      </h1>
-      <button class="btn btn-outline btn-secondary">Secondary</button>
+    <div class="bg-gradient-to-r from-slate-200 via-stone-300 to-slate-200">
+        <div class=" mx:5 lg:mx-32 text-black pt-4">
+            <div class="navbar">
+                <div class="navbar-start">
+                    <button class="w-8 h-8 bg-[#abef5f] rounded-full mr-1"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black"></i></button>
+                     <h3 class="text-4xl font-extrabold">Rinterio</h3>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                      <li class="font-bold"><a>Home</a></li>
+                      <li><a>Services</a></li>
+                      <li><a>Portfolio</a></li>
+                      <li><a>Blogs</a></li>
+                      <li><a>Contact Us</a></li>
+                    </ul>
+                  </div>
+                <div class="navbar-end lg:flex hidden">
+                  <button class="w-10 h-10 bg-white rounded-full mr-4">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                  </button>
+                  <button class="w-10 h-10 bg-white rounded-full mr-4">
+                    <i class="fa-solid fa-cart-shopping text-black"></i>
+                  </button>
+                  <button class="rounded-full px-4 py-2 bg-[#abef5f]"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+                </div>
+                <div class="navbar-end lg:hidden">
+                    <!-- <button class="w-10 h-10 bg-white rounded-full mr-4">
+                        <i class="fa-solid fa-bars"></i>
+                      </button> -->
+                      <div class="dropdown">
+                        <button class="w-10 h-10 bg-white rounded-full mr-4">
+                            <i class="fa-solid fa-bars w-8"></i>
+                          </button>
+                        <ul
+                          tabindex="0"
+                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                          <li><a>Homepage</a></li>
+                          <li><a>Portfolio</a></li>
+                          <li><a>About</a></li>
+                        </ul>
+                      </div>
+                </div>
+              </div>
+        </div>
+    </div>
 </body>
 </html>
