--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </head>
 <body class="body-font">
     <div class="bg-gradient-to-r from-slate-200 via-stone-300 to-slate-200">
-        <div class=" mx:5 lg:mx-32 text-black pt-4">
+        <div class="mx:5 lg:mx-32 text-black pt-4">
             <div class="navbar">
                 <div class="navbar-start">
-                    <button class="w-8 h-8 bg-[#abef5f] rounded-full mr-1"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black"></i></button>
+                    <button class="w-8 h-8 bg-[#abef5f] rounded-full lg:mx-4 mx-2 px-2"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black "></i></button>
                      <h3 class="text-4xl font-extrabold">Rinterio</h3>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -53,33 +53,47 @@
                       <li><a>Contact Us</a></li>
                     </ul>
                   </div>
-                <div class="navbar-end lg:flex hidden">
-                  <button class="w-10 h-10 bg-white rounded-full mr-4">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                  </button>
-                  <button class="w-10 h-10 bg-white rounded-full mr-4">
-                    <i class="fa-solid fa-cart-shopping text-black"></i>
-                  </button>
-                  <button class="rounded-full px-4 py-2 bg-[#abef5f]"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
-                </div>
-                <div class="navbar-end lg:hidden">
-                    <!-- <button class="w-10 h-10 bg-white rounded-full mr-4">
-                        <i class="fa-solid fa-bars"></i>
-                      </button> -->
-                      <div class="dropdown">
-                        <button class="w-10 h-10 bg-white rounded-full mr-4">
-                            <i class="fa-solid fa-bars w-8"></i>
-                          </button>
-                        <ul
-                          tabindex="0"
-                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                          <li><a>Homepage</a></li>
-                          <li><a>Portfolio</a></li>
-                          <li><a>About</a></li>
-                        </ul>
+                <div class="navbar-end">
+                  <div class="lg:flex hidden">
+                    <button class="w-10 h-10 bg-white rounded-full mr-4 ">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                      </button>
+                      <button class="w-10 h-10 bg-white rounded-full mr-4 ">
+                        <i class="fa-solid fa-cart-shopping text-black"></i>
+                      </button>
+                      <button class="rounded-full px-4 py-2 bg-[#abef5f]"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+                  </div>
+                  <div class="flex-none lg:hidden">
+                    <div class="dropdown dropdown-end">
+                      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+                        <div class="w-10 rounded-full">
+                          <button class="w-10 h-10 bg-white rounded-full mr-4">
+                              <i class="fa-solid fa-bars w-10"></i>
+                            </button>
+                        </div>
                       </div>
+                      <ul
+                        tabindex="0"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                        <li class="text-white"><a>Home</a></li>
+                        <li class="text-white"><a>Services</a></li>
+                        <li class="text-white"><a>Portfolio</a></li>
+                        <li class="text-white"><a>Blogs</a></li>
+                        <li class="text-white"><a>Contact Us</a></li>
+                      </ul>
+                    </div>
                 </div>
-              </div>
+            </div>
+        </div>
+        <div class="lg:mx-32 mx-5 mt-12 flex flex-col items-center">
+            <div>
+                <img src="./images/banner.png" alt="">
+            </div>
+            <div class="text-center pb-16">
+            <h1 class="lg:text-6xl text-2xl font-extrabold my-6">A barn house of this design has a   striking appearance</h1>
+            <p class="mb-8 leading-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="rounded-full px-6 py-2 bg-[#d0f5a5]"><p class="font-extrabold">View Details<i class="fa-solid fa-arrow-right rotate-[-45deg] bg-[#abef5f] rounded-full text-black ml-4 p-2"></i></p> </button>
+            </div>
         </div>
     </div>
 </body>
