add process section with responsive

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
     <style>
         .body-font{
             font-family: "Manrope", sans-serif;
+            background-color: white;
         }
     </style>
 </head>
 <body class="body-font">
-    <div class="bg-gradient-to-r from-slate-200 via-stone-300 to-slate-200">
+    <!-- header section -->
+    <div class="bg-gradient-to-r from-slate-200 via-stone-50 to-slate-200">
         <div class="mx:5 lg:mx-32 text-black pt-4">
             <div class="navbar">
                 <div class="navbar-start">
@@ -92,9 +94,73 @@
             <div class="text-center pb-16">
             <h1 class="lg:text-6xl text-2xl font-extrabold my-6">A barn house of this design has a   striking appearance</h1>
             <p class="mb-8 leading-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="rounded-full px-6 py-2 bg-[#d0f5a5]"><p class="font-extrabold">View Details<i class="fa-solid fa-arrow-right rotate-[-45deg] bg-[#abef5f] rounded-full text-black ml-4 p-2"></i></p> </button>
+            <button class="rounded-full lg:px-6 lg:w-1/4 w-full py-2 bg-[#d0f5a5]"><p class="font-extrabold">View Details<i class="fa-solid fa-arrow-right rotate-[-45deg] bg-[#abef5f] rounded-full text-black ml-4 p-2"></i></p> </button>
             </div>
         </div>
     </div>
+    <!-- about us section -->
+     <div class="bg-slate-200 pt-4">
+        <div class="lg:flex hidden ml-20">
+            <img src="./images/Vector.png" alt="">
+         </div>
+         <div class="grid lg:grid-cols-2 gap-9 lg:mx-32 mx-5 mt-4 lg:pb-20 pb-12">
+            <div class="text-black">
+                <div class="lg:text-left text-center">
+                    <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-white"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>About Us</p> </button>
+                    <h3 class="lg:text-4xl text-2xl font-black lg:my-6 my-4"> We design thoughtful,<br> liveable spaces</h3>
+                    <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="my-4 lg:my-6 lg:p-6 p-2 bg-white rounded-lg flex justify-center">
+                    <img class="mr-6 lg:w-14 lg:h-14 w-10 h-10" src="./images/commercial.png" alt="">
+                    <div class="lg:pr-20 pr-1">
+                        <h3 class="font-extrabold lg:text-xl text-base mb-2">Commercial</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="my-4 lg:my-6 lg:p-6 p-2 bg-white rounded-lg flex justify-center">
+                    <img class="mr-6 lg:w-14 lg:h-14 w-10 h-10" src="./images/residential.png" alt="">
+                    <div class="lg:pr-20 pr-1">
+                        <h3 class="font-extrabold lg:text-xl text-base mb-2">Residential</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="./images/Rectangle.png" alt="">
+            </div>
+         </div>
+     </div>
+     <!-- our work process -->
+     <div class="bg-slate-200 lg:pb-24 py-8">
+        <div class="lg:mx-32 mx-5 text-black">
+            <div class="text-center">
+                <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-white"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>How we works</p> </button>
+                <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Works Process</h3>
+                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="grid lg:grid-cols-4 gap-5 ">
+                <div class="rounded-lg lg:p-6 p-4 bg-pink-300">
+                    <img src="./images/concept.png" alt="">
+                    <h5 class="text-xl font-bold my-3">Concept</h5>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="rounded-lg p-6 bg-yellow-300">
+                    <img src="./images/flow-chart.png" alt="">
+                    <h5 class="text-xl font-bold my-3">Design Process</h5>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="rounded-lg p-6 bg-teal-300">
+                    <img src="./images/vision.png" alt="">
+                    <h5 class="text-xl font-bold my-3">Supervision</h5>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="rounded-lg p-6 bg-blue-300">
+                    <img src="./images/budget-planning.png" alt="">
+                    <h5 class="text-xl font-bold my-3">Budget Planning</h5>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
