add footer and contact section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                       </div>
                       <ul
                         tabindex="0"
-                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                        <li class="text-white"><a>Home</a></li>
-                        <li class="text-white"><a>Services</a></li>
-                        <li class="text-white"><a>Portfolio</a></li>
-                        <li class="text-white"><a>Blogs</a></li>
-                        <li class="text-white"><a>Contact Us</a></li>
+                        class="menu menu-sm dropdown-content bg-white rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                        <li><a>Home</a></li>
+                        <li><a>Services</a></li>
+                        <li><a>Portfolio</a></li>
+                        <li><a>Blogs</a></li>
+                        <li><a>Contact Us</a></li>
                       </ul>
                     </div>
                 </div>
@@ -161,6 +161,58 @@
                 </div>
             </div>
         </div>
+     </div>
+     <!-- Next project section -->
+     <div class="">
+        <div
+        class="hero lg:my-8 my-4"
+        style="background-image: url(./images/bg.jpg);">
+        <div class="hero-content  ">
+          <div class="text-black lg:my-24 my-8 lg:mx-32">
+            <div class="text-center ">
+                <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Lets Connect</p> </button>
+                <h3 class="lg:text-4xl text-2xl font-black my-5 ">Let’s Discuss Next Project</h3>
+                <p class="mb-8 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="text-center grid gap-4">
+                 <div class="">
+                    <input class="lg:w-[48%] w-full bg-white lg:p-5 p-3 rounded-full lg:mr-4 lg:mb-0 mb-4" type="text" placeholder="First Name*">
+                    <input class="lg:w-[48%] w-full bg-white lg:p-5 p-3 rounded-full lg:ml-4" type="text" placeholder="Last Name*">
+                 </div>
+                 <div class="my-2">
+                    <input class="lg:w-[48%] w-full bg-white lg:p-5 p-3 rounded-full lg:mr-4 lg:mb-0 mb-4" type="text" placeholder="Phone Number*">
+                    <input class="lg:w-[48%] w-full bg-white lg:p-5 p-3 rounded-full lg:ml-4" type="text" placeholder="Email*">
+                 </div>
+                 <div>
+                    <textarea class="textarea rounded-3xl bg-white w-full p-4 h-full pb-24" placeholder="Write your message here"></textarea>
+                 </div>
+                 <button class="rounded-full px-4 py-2 bg-[#abef5f] w-full"><p class="font-extrabold">Send Mail<i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+            </div>
+          </div>
+        </div>
+      </div>
+     </div>
+     <!-- footer section -->
+     <div class="bg-black">
+        <div class="text-center lg:py-24 lg:px-32 px-5 py-20">
+            <div class="flex justify-center text-center items-center">
+                <button class="w-8 h-8 bg-[#abef5f] rounded-full lg:mx-4 mx-2 px-2"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black "></i></button>
+               <h3 class="text-4xl font-extrabold">Rinterio</h3>
+            </div>
+            <p class="lg:mx-72 lg:leading-7 my-4 opacity-80">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents.</p>
+            <div class="text-center ">
+                <div>
+                    <ul class="lg:flex justify-around lg:mx-40 my-12 font-bold">
+                        <li><a>Home</a></li>
+                        <li class="lg:my-0 my-4"><a>Services</a></li>
+                        <li><a>Portfolio</a></li>
+                        <li class="lg:my-0 my-4"><a>Blogs</a></li>
+                        <li><a>Contact Us</a></li>
+                      </ul>
+                </div>
+            </div>
+            <button class="rounded-full px-4 py-2 bg-[#abef5f] text-black"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+         </div>
      </div>
 </body>
 </html>
