--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body class="body-font">
     <!-- header section -->
-    <div class="bg-gradient-to-r from-slate-200 via-stone-50 to-slate-200">
+    <div class="bg-gradient-to-r from-slate-200 via-stone-50 to-slate-200" id="home">
         <div class="mx:5 lg:mx-32 text-black pt-4">
             <div class="navbar">
                 <div class="navbar-start">
@@ -48,11 +48,11 @@
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
-                      <li class="font-bold"><a>Home</a></li>
-                      <li><a>Services</a></li>
-                      <li><a>Portfolio</a></li>
-                      <li><a>Blogs</a></li>
-                      <li><a>Contact Us</a></li>
+                      <li class="font-bold"><a href="#home">Home</a></li>
+                      <li><a href="#services">Services</a></li>
+                      <li><a href="#portfolio">Portfolio</a></li>
+                      <li><a href="#blogs">Blogs</a></li>
+                      <li><a href="#contactUs">Contact Us</a></li>
                     </ul>
                   </div>
                 <div class="navbar-end">
@@ -63,7 +63,9 @@
                       <button class="w-10 h-10 bg-white rounded-full mr-4 ">
                         <i class="fa-solid fa-cart-shopping text-black"></i>
                       </button>
-                      <button class="rounded-full px-4 py-2 bg-[#abef5f]"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+                      <button class="rounded-full px-4 py-2 bg-[#abef5f]"><a href="#contactUs">
+                        <p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p>
+                      </a> </button>
                   </div>
                   <div class="flex-none lg:hidden">
                     <div class="dropdown dropdown-end">
@@ -77,11 +79,11 @@
                       <ul
                         tabindex="0"
                         class="menu menu-sm dropdown-content bg-white rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                        <li><a>Home</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Portfolio</a></li>
-                        <li><a>Blogs</a></li>
-                        <li><a>Contact Us</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#blogs">Blogs</a></li>
+                        <li><a href="#contactUs">Contact Us</a></li>
                       </ul>
                     </div>
                 </div>
@@ -99,7 +101,7 @@
         </div>
     </div>
     <!-- about us section -->
-     <div class="bg-slate-200 pt-4">
+     <div class="bg-slate-200 pt-4" id="services">
         <div class="lg:flex hidden ml-20">
             <img src="./images/Vector.png" alt="">
          </div>
@@ -131,7 +133,7 @@
          </div>
      </div>
      <!-- our work process -->
-     <div class="bg-slate-200 lg:pb-24 py-8">
+     <div class="bg-slate-200 lg:pb-24 py-8" id="blogs">
         <div class="lg:mx-32 mx-5 text-black">
             <div class="text-center">
                 <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-white"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>How we works</p> </button>
@@ -162,10 +164,52 @@
             </div>
         </div>
      </div>
+     <!--portfolio latest work -->
+      <div class="bg-slate-100 lg:pb-24 py-8" id="portfolio">
+        <div class="lg:mx-32 mx-5 text-black">
+            <div class="text-center lg:mx-32 lg:pb-8">
+                <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Explore our Latest works</p> </button>
+                <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Latest Portfolio</h3>
+                <p class="lg:mb-8 mb-2 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="lg:grid lg:grid-cols-3 gap-6 justify-between  items-center">
+                <div class="lg:col-span-2 lg:flex bg-white rounded-2xl">
+                    <img class="p-4" src="./images/img1.png" alt="">
+                    <div class="m-4">
+                        <h3 class="text-2xl font-bold">Commercial</h3>
+                        <p class="lg:mr-8 my-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <button class="rounded-full py-2 "><p class="font-extrabold">View Details <i class="fa-solid fa-arrow-right rotate-[-45deg] text-black bg-[#abef5f] rounded-full ml-1 p-2"></i></p> </button>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl lg:ml-8">
+                    <img class="p-4 ml-2" src="./images/img2.png" alt="">
+                </div>
+            </div>
+             <div class="lg:grid lg:grid-cols-4 my-8 lg:gap-12 gap-4 justify-between flex flex-col-reverse items-center">
+                <div class="bg-white rounded-2xl">
+                    <img class="p-4 w-full h-full" src="./images/img3.png" alt="">
+                </div>
+                <div class="col-span-2 lg:flex bg-white rounded-2xl">
+                    <img class="p-4 items-center justify-center w-full h-full" src="./images/img4.png" alt="">
+                    <div class="ml-4">
+                        <h3 class="text-xl font-bold pt-4">Commercial</h3>
+                        <p class="lg:mr-8 my-1">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <button class="rounded-full py-2 "><p class="font-extrabold">View Details <i class="fa-solid fa-arrow-right rotate-[-45deg] text-black bg-[#abef5f] rounded-full ml-1 p-2"></i></p> </button>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl">
+                    <img class="p-4 lg:ml-3 w-full h-full" src="./images/img5.png" alt="">
+                </div>
+             </div>
+             <div class="lg:hidden bg-white rounded-2xl ">
+                <img class="p-4 w-full h-full" src="./images/img5.png" alt="">
+             </div>
+      </div>
+      </div>
      <!-- Next project section -->
-     <div class="">
+     <div class="" id="contactUs">
         <div
-        class="hero lg:my-8 my-4"
+        class="hero lg:py-8 py-4"
         style="background-image: url(./images/bg.jpg);">
         <div class="hero-content  ">
           <div class="text-black lg:my-24 my-8 lg:mx-32">
@@ -193,7 +237,7 @@
       </div>
      </div>
      <!-- footer section -->
-     <div class="bg-black">
+     <div class="bg-black" id="footer">
         <div class="text-center lg:py-24 lg:px-32 px-5 py-20">
             <div class="flex justify-center text-center items-center">
                 <button class="w-8 h-8 bg-[#abef5f] rounded-full lg:mx-4 mx-2 px-2"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black "></i></button>
@@ -203,15 +247,17 @@
             <div class="text-center ">
                 <div>
                     <ul class="lg:flex justify-around lg:mx-40 my-12 font-bold">
-                        <li><a>Home</a></li>
-                        <li class="lg:my-0 my-4"><a>Services</a></li>
-                        <li><a>Portfolio</a></li>
-                        <li class="lg:my-0 my-4"><a>Blogs</a></li>
-                        <li><a>Contact Us</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li class="lg:my-0 my-4"><a href="#services">Services</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li class="lg:my-0 my-4"><a href="#blogs">Blogs</a></li>
+                        <li><a href="#contactUs">Contact Us</a></li>
                       </ul>
                 </div>
             </div>
-            <button class="rounded-full px-4 py-2 bg-[#abef5f] text-black"><p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p> </button>
+            <button class="rounded-full px-4 py-2 bg-[#abef5f] text-black"><a href="#home">
+                <p class="font-extrabold">Book Consult <i class="fa-solid fa-arrow-right rotate-[-45deg] bg-black rounded-full text-white ml-1 p-2"></i></p>
+            </a> </button>
          </div>
      </div>
 </body>
