--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="lg:grid lg:grid-cols-3 gap-6 justify-between  items-center">
                 <div class="lg:col-span-2 lg:flex bg-white rounded-2xl">
-                    <img class="p-4" src="./images/img1.png" alt="">
+                    <img class="p-4 lg:w-[300px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img1.png" alt="">
                     <div class="m-4">
                         <h3 class="text-2xl font-bold">Commercial</h3>
                         <p class="lg:mr-8 my-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
@@ -185,9 +185,9 @@
                     <img class="p-4 ml-2" src="./images/img2.png" alt="">
                 </div>
             </div>
-             <div class="lg:grid lg:grid-cols-4 my-8 lg:gap-12 gap-4 justify-between flex flex-col-reverse items-center">
-                <div class="bg-white rounded-2xl">
-                    <img class="p-4 w-full h-full" src="./images/img3.png" alt="">
+             <div class="lg:grid lg:grid-cols-4 my-8 lg:gap-12 gap-1 justify-between flex flex-col-reverse items-center">
+                <div class="bg-white rounded-2xl ">
+                    <img class="p-4 lg:w-[260px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img3.png" alt="">
                 </div>
                 <div class="col-span-2 lg:flex bg-white rounded-2xl">
                     <img class="p-4 items-center justify-center w-full h-full" src="./images/img4.png" alt="">
@@ -198,11 +198,11 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl">
-                    <img class="p-4 lg:ml-3 w-full h-full" src="./images/img5.png" alt="">
+                    <img class="p-4 lg:ml-5 lg:w-[250px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img5.png" alt="">
                 </div>
              </div>
              <div class="lg:hidden bg-white rounded-2xl ">
-                <img class="p-4 w-full h-full" src="./images/img5.png" alt="">
+                <img class="p-4 w-[350px] h-[200px]" src="./images/img5.png" alt="">
              </div>
       </div>
       </div>
