fixed portfolio section

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Latest Portfolio</h3>
                 <p class="lg:mb-8 mb-2 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-            <div class="lg:grid lg:grid-cols-3 gap-6 justify-between  items-center">
+            <div class="lg:grid lg:grid-cols-3 gap-4 justify-between  items-center">
                 <div class="lg:col-span-2 lg:flex bg-white rounded-2xl">
-                    <img class="p-4 lg:w-[300px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img1.png" alt="">
+                    <img class="p-4 lg:w-[300px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img1.png" alt="">
                     <div class="m-4">
                         <h3 class="text-2xl font-bold">Commercial</h3>
                         <p class="lg:mr-8 my-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
@@ -182,15 +182,15 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl lg:ml-8">
-                    <img class="p-4 ml-2" src="./images/img2.png" alt="">
+                    <img class="p-4 ml-2 lg:w-[360px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img2.png" alt="">
                 </div>
             </div>
-             <div class="lg:grid lg:grid-cols-4 my-8 lg:gap-12 gap-1 justify-between flex flex-col-reverse items-center">
+             <div class="lg:grid lg:grid-cols-4 mt-8 mb-4 lg:gap-12 gap-4 justify-between flex flex-col-reverse items-center">
                 <div class="bg-white rounded-2xl ">
-                    <img class="p-4 lg:w-[260px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img3.png" alt="">
+                    <img class="p-4 lg:w-[260px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img3.png" alt="">
                 </div>
                 <div class="col-span-2 lg:flex bg-white rounded-2xl">
-                    <img class="p-4 items-center justify-center w-full h-full" src="./images/img4.png" alt="">
+                    <img class="p-4 items-center justify-center lg:w-full lg:h-full w-[295px] h-[197px]" src="./images/img4.png" alt="">
                     <div class="ml-4">
                         <h3 class="text-xl font-bold pt-4">Commercial</h3>
                         <p class="lg:mr-8 my-1">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
@@ -198,11 +198,11 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl">
-                    <img class="p-4 lg:ml-5 lg:w-[250px] lg:h-[210px] w-[350px] h-[200px]" src="./images/img5.png" alt="">
+                    <img class="p-4 lg:ml-5 lg:w-[250px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img5.png" alt="">
                 </div>
              </div>
              <div class="lg:hidden bg-white rounded-2xl ">
-                <img class="p-4 w-[350px] h-[200px]" src="./images/img5.png" alt="">
+                <img class="p-4 w-[295px] h-[197px]" src="./images/img5.png" alt="">
              </div>
       </div>
       </div>
