add challanges section

--- a/index.html
+++ b/index.html
@@ -206,6 +206,72 @@
              </div>
       </div>
       </div>
+       <!-- our work process -->
+     <div class="bg-slate-200 lg:pb-24 py-8" id="blogs">
+        <div class="lg:mx-32 mx-5 text-black">
+            <div class="text-center">
+                <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Our happy Clients</p> </button>
+                <h3 class="lg:text-4xl text-2xl font-black my-5 ">More Than 50K Happy Clients</h3>
+                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="overflow-x-auto">
+                <table class="table">
+                  <!-- head -->
+                  <thead>
+                    <tr>
+                      <th>Serial</th>
+                      <th>Name</th>
+                      <th>Location</th>
+                      <th>Booking Time</th>
+                      <th>Finishing Time</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!-- row 1 -->
+                    <tr class="hover:bg-[#d0f5a5]">
+                      <th>1</th>
+                      <td>Abdulla Al Imran</td>
+                      <td>Khunla, Bangladesh</td>
+                      <td>10/02/2023</td>
+                      <td>17/02/2023</td>
+                    </tr>
+                    <!-- row 2 -->
+                    <tr class="hover:bg-[#d0f5a5]">
+                      <th>2</th>
+                      <td>Rahat Mamun</td>
+                      <td>Barisal, Bangladesh</td>
+                      <td>15/02/2023</td>
+                      <td>23/02/2023</td>
+                    </tr>
+                    <!-- row 3 -->
+                    <tr class="hover:bg-[#d0f5a5]">
+                      <th>3</th>
+                      <td>Md.Jubair</td>
+                      <td>Jashore, Khulna</td>
+                      <td>21/01/2024</td>
+                      <td>27/01/2024</td>
+                    </tr>
+                     <!-- row 4 -->
+                     <tr class="hover:bg-[#d0f5a5]">
+                        <th>4</th>
+                        <td>Md.Noman</td>
+                        <td>Khulna, Bangladesh</td>
+                        <td>15/02/2024</td>
+                        <td>23/02/2023</td>
+                      </tr>
+                      <!-- row 5 -->
+                      <tr class="hover:bg-[#d0f5a5]">
+                        <th>5</th>
+                        <td>Md.Rafi</td>
+                        <td>Jashore, Khulna</td>
+                        <td>11/03/2024</td>
+                        <td>20/03/2024</td>
+                      </tr>
+                  </tbody>
+                </table>
+              </div>
+        </div>
+     </div>
      <!-- Next project section -->
      <div class="" id="contactUs">
         <div
