--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Latest Portfolio</h3>
                 <p class="lg:mb-8 mb-2 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-            <div class="lg:grid lg:grid-cols-3 gap-4 justify-between  items-center">
+            <div class="lg:grid lg:grid-cols-3 gap-4 justify-center  items-center">
                 <div class="lg:col-span-2 lg:flex bg-white rounded-2xl">
                     <img class="p-4 lg:w-[300px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img1.png" alt="">
                     <div class="m-4">
@@ -185,7 +185,7 @@
                     <img class="p-4 ml-2 lg:w-[360px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img2.png" alt="">
                 </div>
             </div>
-             <div class="lg:grid lg:grid-cols-4 mt-8 mb-4 lg:gap-12 gap-4 justify-between flex flex-col-reverse items-center">
+             <div class="lg:grid lg:grid-cols-4 mt-8 mb-4 lg:gap-12 gap-4 justify-center flex flex-col-reverse items-center">
                 <div class="bg-white rounded-2xl ">
                     <img class="p-4 lg:w-[260px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img3.png" alt="">
                 </div>
