color issue fixed

--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
         <div class="text-center lg:py-24 lg:px-32 px-5 py-20">
             <div class="flex justify-center text-center items-center">
                 <button class="w-8 h-8 bg-[#abef5f] rounded-full lg:mx-4 mx-2 px-2"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black "></i></button>
-               <h3 class="text-4xl font-extrabold">Rinterio</h3>
+               <h3 class="text-4xl font-extrabold text-white">Rinterio</h3>
             </div>
-            <p class="lg:mx-72 lg:leading-7 my-4 opacity-80">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents.</p>
-            <div class="text-center ">
+            <p class="lg:mx-72 lg:leading-7 my-4 opacity-80 text-white">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents.</p>
+            <div class="text-center text-white">
                 <div>
                     <ul class="lg:flex justify-around lg:mx-40 my-12 font-bold">
                         <li><a href="#home">Home</a></li>
