change the dummy text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="text-center pb-16">
             <h1 class="lg:text-6xl text-2xl font-extrabold my-6">A barn house of this design has a   striking appearance</h1>
-            <p class="mb-8 leading-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <p class="mb-8 leading-8">A barn house with this design features a striking appearance, blending rustic charm with modern aesthetics. Its bold lines and unique materials create a standout structure that harmoniously integrates with its surroundings while offering contemporary comfort and functionality.</p>
             <button class="rounded-full lg:px-6 lg:w-1/4 w-full py-2 bg-[#d0f5a5]"><p class="font-extrabold">View Details<i class="fa-solid fa-arrow-right rotate-[-45deg] bg-[#abef5f] rounded-full text-black ml-4 p-2"></i></p> </button>
             </div>
         </div>
@@ -110,20 +110,20 @@
                 <div class="lg:text-left text-center">
                     <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-white"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>About Us</p> </button>
                     <h3 class="lg:text-4xl text-2xl font-black lg:my-6 my-4"> We design thoughtful,<br> liveable spaces</h3>
-                    <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p>We create inviting, functional spaces that blend aesthetics with practicality, ensuring every detail enhances both comfort and usability.</p>
                 </div>
                 <div class="my-4 lg:my-6 lg:p-6 p-2 bg-white rounded-lg flex justify-center">
                     <img class="mr-6 lg:w-14 lg:h-14 w-10 h-10" src="./images/commercial.png" alt="">
                     <div class="lg:pr-20 pr-1">
                         <h3 class="font-extrabold lg:text-xl text-base mb-2">Commercial</h3>
-                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p>We craft innovative commercial spaces that maximize efficiency, inspire productivity, and reflect brand identity.</p>
                     </div>
                 </div>
                 <div class="my-4 lg:my-6 lg:p-6 p-2 bg-white rounded-lg flex justify-center">
                     <img class="mr-6 lg:w-14 lg:h-14 w-10 h-10" src="./images/residential.png" alt="">
                     <div class="lg:pr-20 pr-1">
                         <h3 class="font-extrabold lg:text-xl text-base mb-2">Residential</h3>
-                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p>We design personalized residential spaces that offer comfort, style, and functionality, tailored to your lifestyle.</p>
                     </div>
                 </div>
             </div>
@@ -138,28 +138,28 @@
             <div class="text-center">
                 <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-white"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>How we works</p> </button>
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Works Process</h3>
-                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">Our process involves careful planning, collaborative design, expert craftsmanship, and meticulous attention to detail, ensuring each project exceeds expectations.</p>
             </div>
             <div class="grid lg:grid-cols-4 gap-5 ">
                 <div class="rounded-lg lg:p-6 p-4 bg-pink-300">
                     <img src="./images/concept.png" alt="">
                     <h5 class="text-xl font-bold my-3">Concept</h5>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p>Innovative ideas transforming spacesaesthetically pleasing environments.</p>
                 </div>
                 <div class="rounded-lg p-6 bg-yellow-300">
                     <img src="./images/flow-chart.png" alt="">
                     <h5 class="text-xl font-bold my-3">Design Process</h5>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p>Creative vision meets precision, beautiful spaces.</p>
                 </div>
                 <div class="rounded-lg p-6 bg-teal-300">
                     <img src="./images/vision.png" alt="">
                     <h5 class="text-xl font-bold my-3">Supervision</h5>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p>Ensuring quality and consistency oversight at every project stage.</p>
                 </div>
                 <div class="rounded-lg p-6 bg-blue-300">
                     <img src="./images/budget-planning.png" alt="">
                     <h5 class="text-xl font-bold my-3">Budget Planning</h5>
-                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p>Strategic cost management project goals with financial efficiency.</p>
                 </div>
             </div>
         </div>
@@ -170,14 +170,14 @@
             <div class="text-center lg:mx-32 lg:pb-8">
                 <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Explore our Latest works</p> </button>
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">Our Latest Portfolio</h3>
-                <p class="lg:mb-8 mb-2 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="lg:mb-8 mb-2 leading-7 lg:text-xl text-sm">Showcasing our recent projects that blend creativity, functionality,with its blend of rustic charm and exceptional design.</p>
             </div>
             <div class="lg:grid lg:grid-cols-3 gap-4 justify-center  items-center">
                 <div class="lg:col-span-2 lg:flex bg-white rounded-2xl">
                     <img class="p-4 lg:w-[300px] lg:h-[210px] w-[295px] h-[197px]" src="./images/img1.png" alt="">
                     <div class="m-4">
                         <h3 class="text-2xl font-bold">Commercial</h3>
-                        <p class="lg:mr-8 my-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <p class="lg:mr-8 my-3">Innovative, efficient spaces tailored to enhance business operations.Dynamic designs that boost productivity and reflect business identity.</p>
                         <button class="rounded-full py-2 "><p class="font-extrabold">View Details <i class="fa-solid fa-arrow-right rotate-[-45deg] text-black bg-[#abef5f] rounded-full ml-1 p-2"></i></p> </button>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                     <img class="p-4 items-center justify-center lg:w-full lg:h-full w-[295px] h-[197px]" src="./images/img4.png" alt="">
                     <div class="ml-4">
                         <h3 class="text-xl font-bold pt-4">Commercial</h3>
-                        <p class="lg:mr-8 my-1">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <p class="lg:mr-8 my-1">Dynamic designs that boost productivity and reflect business identity.</p>
                         <button class="rounded-full py-2 "><p class="font-extrabold">View Details <i class="fa-solid fa-arrow-right rotate-[-45deg] text-black bg-[#abef5f] rounded-full ml-1 p-2"></i></p> </button>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
             <div class="text-center">
                 <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Our happy Clients</p> </button>
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">More Than 50K Happy Clients</h3>
-                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="mb-8 lg:px-60 leading-7 lg:text-xl text-sm">Over 50,000 satisfied clients trust us for exceptional design solutions that exceed expectations and enhance their spaces.</p>
             </div>
             <div class="overflow-x-auto">
                 <table class="table">
@@ -282,7 +282,7 @@
             <div class="text-center ">
                 <button class="rounded-full lg:px-6 px-4 lg:py-2 py-1 bg-[#d0f5a5]"><p class="font-extrabold text-black"><i class="fa-solid fa-arrow-right text-black mr-1 p-2"></i>Lets Connect</p> </button>
                 <h3 class="lg:text-4xl text-2xl font-black my-5 ">Let’s Discuss Next Project</h3>
-                <p class="mb-8 leading-7 lg:text-xl text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="mb-8 leading-7 lg:text-xl text-sm">Ready to collaborate on your next project? Let’s discuss your vision and transform ideas into remarkable spaces together.</p>
             </div>
             <div class="text-center grid gap-4">
                  <div class="">
@@ -309,7 +309,7 @@
                 <button class="w-8 h-8 bg-[#abef5f] rounded-full lg:mx-4 mx-2 px-2"><i class="fa-solid fa-arrow-right rotate-[-45deg] text-black "></i></button>
                <h3 class="text-4xl font-extrabold text-white">Rinterio</h3>
             </div>
-            <p class="lg:mx-72 lg:leading-7 my-4 opacity-80 text-white">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents.</p>
+            <p class="lg:mx-72 lg:leading-7 my-4 opacity-80 text-white">Rinterio: Redefining spaces with innovative design solutions that merge style, functionality, and client vision seamlessly.</p>
             <div class="text-center text-white">
                 <div>
                     <ul class="lg:flex justify-around lg:mx-40 my-12 font-bold">
